Fix horizontal overflow caused by modtools icons

--- a/src/app/components/Post/PostHeader/styles.less
+++ b/src/app/components/Post/PostHeader/styles.less
@@ -74,7 +74,7 @@
     overflow: hidden;
     position: relative;
     vertical-align: middle;
-    flex: 1 1 100%;
+    flex: 1 0;
 
     .themeify({
       color: @theme-meta-text-color;
@@ -120,7 +120,7 @@
   }
 
   &__metadata {
-    flex: 0 1 0;
+    flex: 0 0 auto;
     padding: 5 5 0 0;
     white-space: nowrap;
   }
